Fixed aside z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -101,9 +101,7 @@ html {
     top: 120px;
 }
 
-aside {
-    z-index: -2;
-}
+
 
 
 /* Header */
@@ -140,9 +138,7 @@ header {
     background-color: white;
     min-width: 160px;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 20px 0 rgba(0, 0, 0, 0.2);
-    z-index: 999;
     border-radius: 10px;
-
 
 }
 
@@ -184,7 +180,6 @@ header {
     text-decoration: none;
     display: block;
     font-size: 16px;
-    z-index: 999;
 }
 
 .dropdown-content-left a:hover {
@@ -924,4 +919,9 @@ footer ul li a:hover {
     vertical-align: middle;
     margin: 0 10px;
     border-radius: 50%;
+}
+
+#post {
+    width: 20px;
+    height: 30px;
 }
